# qa_agent

./: .dockerignore  .gitignore  Dockerfile  agent.py  api.py  main.py  pyproject.toml  setup_nltk.py  start.sh
config/: __init__.py  config.py  config.yaml
core/: __init__.py  log.py
exception/: __init__.py  qa_exception.py
prompts/: __init__.py  qa_prompts.py
utils/: __init__.py  file_utils.py
vector_store/: chroma.sqlite3
